<resources>
    <string name="app_name">Connection</string>
    <string name="connection">Connection</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="name">UserName</string>
    <string name="sign_up">SIGN UP</string>
    <string name="create_an_acoount">Create An Acoount?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_in_with_social_account">Sign In With Social Account</string>
    <string name="sign_up_with_social_accounts">Sign Up With Social Accounts?</string>
    <string name="already_an_account">Already An Account?</string>
    <string name="i_accept_the_terms_and_policy">I Accept The Terms And Policy</string>
    <string name="mobile">Mobile</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="new_account">New Account</string>
    <string name="edit_number">Edit Number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_otp">Enter Otp</string>
    <string name="enter_4_digit_code">Enter 4 Digit Code</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="change_user_profile_photo">Change User Profile Photo</string>
    <string name="last_name">Last Name</string>
    <string name="change_password">Change Password</string>
    <string name="show_notification_on_home_screen">Show Notification on Home Screen</string>
    <string name="back">Back</string>
    <string name="save_and_exit">Save And Exit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="book_your_cab_now">Book Your Now</string>
    <string name="pu_3_commercial_princes_business_skypark_6th_floor_611_ab_rd_scheme_no_54">PU-3 Commercial, Princes Business Skypark, 6th Floor, 611, AB Rd, Scheme No 54,</string>
    <string name="festival_amp_events"><![CDATA[Festival & Events]]></string>
    <string name="indians_stores">Indians Stores</string>
    <string name="videos">Videos</string>
    <string name="about_us_content">About us pages fill a number of roles for businesses, including traditional and search-engine marketing, relationship building with customers and describing who runs a business and what it does. For ecommerce store owners, an about us page is a powerful differentiator that helps stores stand out from their competitors.</string>
    <string name="about_us">About Us</string>
    <string name="search_ride">Search Ride</string>
    <string name="current_location">Current Location</string>
    <string name="khajrana_indore_madhya_pradesh">khajrana Indore Madhya Pradesh</string>
    <string name="_06_cars_are_available">06 CARS ARE AVAILABLE</string>
    <string name="rides">Rides</string>
    <string name="book_now">Book Now</string>
    <string name="successfully_cab_book">Successfully Cab Book</string>
    <string name="driver_name">Driver Name</string>
    <string name="rahul_maheswari">Rahul Maheswari</string>
    <string name="accommodation">Accommodation</string>
    <string name="teffin_services">Teffin Services</string>
    <string name="holy_place">Holy Place</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="doyouwanttologout">Do you want to logout?</string>
    <string name="logout">Log Out</string>
    <string name="notification">Notification</string>
    <string name="name_of_tififin_center">Name Of Tififin Center</string>
    <string name="cash">Cash</string>
    <string name="paypal">PayPal</string>
    <string name="confirmed">Confirmed</string>
    <string name="CONTINUE">CONTINUE</string>
    <string name="facebook_app_id">238764324161493</string>
    <string name="fb_login_protocol_scheme">fb238764324161493</string>
    <string name="amp_45"><![CDATA[& 45]]></string>
    <string name="_3_beat_available">3 Beat available</string>
    <string name="car_list">Car List</string>
    <string name="vehicle_no">Vehicle No.</string>
    <string name="mp_09_tc_8526">MP 09 tc 8526</string>
    <string name="type_your_message">Type your message</string>
    <string name="_91_7415882263">+91 7415882263</string>
    <string name="car_name">Car Name</string>
    <string name="toyota_avensis">Toyota Avensis</string>
    <string name="as">:</string>
    <string name="_10_22_am">10.22 am</string>
    <string name="hey_whats_ur_plan_today">Hey, Whats ur Plan Today</string>
    <string name="hey_whats_up_mmm_nothing_special_to_now">Hey,Whats up? mmm. Nothing special to now</string>
    <string name="notifications">Notifications</string>
    <string name="lorem_ipsum_is_a_placeholder_text_csutom_view_back_id_1">Lorem ipsum is a placeholder text csutom view back id Lorem ipsum is a placeholder text csutom view back id</string>
    <string name="lorem_ipsum_is_a_placeholder_text_csutom_view_back_id">Lorem ipsum is a placeholder text csutom view back id</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="switch_to_driver">Switch To Driver</string>
    <string name="full_name">Full Name</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="driver_license">Driver License</string>
    <string name="upload_the_following_things_required">Upload The Following Things(Required)</string>
    <string name="_01_vehicle_photo">01 : Vehicle photo</string>
    <string name="_03_permit">03: Permit</string>
    <string name="submit_your_details">Submit your Details</string>
    <string name="submit">Submit</string>
    <string name="ride_request">Ride Request</string>
    <string name="zanzibar_stone_town">Zanzibar,Stone Town</string>
    <string name="near_from_killmanjaro_airport">(Near From killmanjaro Airport)</string>
    <string name="_15_min">15 min.</string>
    <string name="_3_5_k_m">3.5 k.m</string>
    <string name="dranyen_thames">Dranyen Thames</string>
    <string name="bid_now">Bid Now</string>
    <string name="my_current_location">My current Location</string>
    <string name="drop_location">Drop location</string>
    <string name="amp_100"><![CDATA[+&100]]></string>
    <string name="_50"><![CDATA[&50]]></string>
    <string name="chat_now">Chat Now</string>
    <string name="view_map">View Map</string>
    <string name="congratulation_johne_dow_has_accepled_your_offer_start_ride_with_him">Congratulation Johne Dow has Accepled your offer Start Ride With Him</string>
    <string name="free_amount_amp_50"><![CDATA[Free Amount : & 50]]></string>
    <string name="call">Call</string>
    <string name="successfully_request_send">Successfully Request Send</string>
    <string name="refresh">Refresh</string>
    <string name="request">Request</string>
    <string name="_00_30">00:30</string>
    <string name="not_record_available">No Record Available</string>
    <string name="home">Home</string>
    <string name="hello_username">Hello! UserName</string>
    <string name="congratulations_request_accepted">Congratulations! Request Accepted</string>
    <string name="create_you_route">Create You Route</string>
    <string name="start_sharing_ride">Start Sharing Ride</string>
    <string name="amount_per_k_m">Amount Per K.M</string>
    <string name="total_no_of_seats">Total No of Seats</string>
    <string name="chat">Chat</string>
    <string name="edit_location">Edit Location</string>
    <string name="do_you_want_to_delete_account">Do you want to delete account?</string>
    <string name="delete">Delete</string>
    <string name="notification_channel_id">my_channel_01</string>
    <string name="raise_fair">Raise Fair</string>
    <string name="record_not_found">Record Not Found</string>
</resources>
