<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_210sdp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:cardBackgroundColor="#E2E2E2"
        app:cardCornerRadius="10sp"
        app:cardElevation="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivSlideId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="@dimen/_5sdp"
                android:scaleType="fitXY"
                android:src="@drawable/banner"
                app:riv_corner_radius="5sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSelectYouRideTypeCaptionId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/name_of_tififin_center"
                android:textColor="@color/ColorFont"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:text="@string/pu_3_commercial_princes_business_skypark_6th_floor_611_ab_rd_scheme_no_54"
                android:textColor="@color/ColorFont"
                android:textSize="@dimen/_9sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/square_border_main"
                android:gravity="center"
                android:padding="@dimen/_9sdp"
                android:singleLine="true"
                android:text="@string/book_your_cab_now"
                android:textAlignment="center"
                android:textColor="@color/ColorWhite"
                android:textSize="9dp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>