<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_5sdp"
    android:layout_marginEnd="@dimen/_5sdp"
    android:layout_marginBottom="@dimen/_5sdp"
    app:cardBackgroundColor="@color/ColorWhite"
    app:cardCornerRadius="@dimen/_5sdp"
    app:cardElevation="@dimen/_5sdp">

    <RelativeLayout
        android:id="@+id/as"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/chat_button_shape">


        <RelativeLayout
            android:id="@+id/asdId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            tools:ignore="RtlHardcoded,UselessParent">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_9sdp"
                    android:layout_height="@dimen/_9sdp"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_awesome_clock"
                    android:padding="@dimen/_8sdp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDateId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/_10_22_am"
                    android:textColor="@color/ColorBlack"
                    android:textSize="@dimen/_7sdp"
                    tools:ignore="RelativeOverlap" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/liprofileId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivcontactuserId"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5sp"
                    android:layout_marginEnd="5sp"
                    android:src="@drawable/deriver_image" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRiderNameId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ivcontactuserId"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/dranyen_thames"
                    android:textColor="@color/ColorBlack"
                    android:textSize="@dimen/_9sdp" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_3sdp"
                android:layout_toEndOf="@+id/liprofileId"
                android:layout_toRightOf="@+id/liprofileId">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFromLocationId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/zanzibar_stone_town"
                    android:textColor="@color/ColorBlack"
                    android:textSize="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDestinationId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvFromLocationId"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/near_from_killmanjaro_airport"
                    android:textColor="@color/ColorBlack"
                    android:textSize="@dimen/_10sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvDestinationId"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_9sdp"
                            android:layout_height="@dimen/_9sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/icon_awesome_clock"
                            android:padding="@dimen/_8sdp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvTimeRideId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:fontFamily="@font/rubik_regular"
                            android:text="@string/_15_min"
                            android:textColor="@color/ColorBlack"
                            android:textSize="@dimen/_8sdp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_9sdp"
                            android:layout_height="@dimen/_9sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/icon_awesome_road"
                            android:padding="@dimen/_8sdp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvKmRideId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:fontFamily="@font/rubik_regular"
                            android:text="@string/_3_5_k_m"
                            android:textColor="@color/ColorBlack"
                            android:textSize="@dimen/_8sdp" />


                    </LinearLayout>


                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlChatId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/asdId"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="right">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnChatId"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/white_rounded_btn"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/chat"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_10sdp"
                android:visibility="gone"
                tools:ignore="RtlHardcoded" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rebidnowId"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_toRightOf="@+id/btnChatId"
                android:background="@drawable/rounded_btn"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:textColor="@color/ColorWhite"
                android:textSize="@dimen/_10sdp"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>