<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivcontactuserId"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/deriver_image" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_toEndOf="@+id/ivcontactuserId"
            android:layout_toRightOf="@+id/ivcontactuserId">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNotificationId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_regular"
                android:text="@string/lorem_ipsum_is_a_placeholder_text_csutom_view_back_id"
                android:textColor="@color/ColorBlack"
                android:textSize="@dimen/_12sdp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:background="@drawable/reject_notification_button"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:text="@string/reject"
                android:textAllCaps="false"
                android:textColor="@color/readcolor"
                android:textSize="@dimen/_9sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/button_shape"
                android:fontFamily="@font/rubik_regular"
                android:gravity="center"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:textColor="@color/ColorWhite"
                android:textSize="@dimen/_9sdp" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>